@@ -2,6 +2,7 @@ OpenLDAP 2.4 Change Log
 
 OpenLDAP 2.4.24 Engineering
 	Added slapd-null back-config support (ITS#6624)
+	Added slapd-sql autocommit support (ITS#6612)
 	Fixed liblber to not close invalid sockets (ITS#6585)
 	Fixed libldap dnssrv port format specifier (ITS#6644)
 	Fixed libldap GnuTLS hang on socket close (ITS#6673)
